package B2;

import java.util.List;

public abstract class Tokenize {
   abstract List<String> tokenize();
}
